<?xml version="1.0"?>
<package>
  <name>uv_face_detect</name>
  <version>0.0.0</version>
  <description>The uv_face_detect package</description>

  <maintainer email="amarin@todo.todo">anmarin@uv.mx</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/uv_face_detect</url> -->
  <url type="repository">https://github.com/UVRoboticsLab/uv_face_detect</url>

  <author email="anmarin@uv.mx">Antonio Marin-Hernandez</author> -->

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>uv_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
<!--  <build_depend>dynamic_reconfigure</build_depend>-->
<!--  <run_depend>dynamic_reconfigure</run_depend>-->
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>uv_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>